ingress/postgres-ing.yaml
# ingress-nginx-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-operator-ui
spec:
  rules:
  - host: postgres
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres-operator-ui
            port:
              number: 80
